--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -57,8 +57,8 @@ a:hover {
 
 #add{
     position: absolute;
-    left: 800px;
-    top: 45px;
+    left: 750px;
+    top: 50px;
 }
 #tab{
 }
@@ -156,4 +156,18 @@ table tr:hover td{
     background: #f2f2f2;
     background: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#f0f0f0));
     background: -moz-linear-gradient(top,  #f2f2f2,  #f0f0f0);
+}
+.wrapper{
+    width: 600px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.wrapperTable{
+    margin: 50px 100px;
+}
+
+.searchWrapper{
+    width: 600px;
+    margin: 0 auto;
 }
